# tea_shop

./: .gitignore  README.md  pyproject.toml  pytest.ini  run.sh
backend/: main.py  model.py  schema.py
frontend/: README.md  package.json  vue.config.js
frontend/src/: App.vue
frontend/src/components/: CreateItem.vue  ListItem.vue
frontend/src/plugins/: axios.js
frontend/src/router/: index.js
frontend/src/views/: DetailView.vue  Home.vue
tests/: test_api.py
